Revision history for Data-Serializable

0.03	??
	Added minimum perl version (used Perl::MinimumVersion)
	Updated to Module::Install 0.91

0.02	2009-05-12
	Fixed missing dependency for testing. Data::Serializer::JSON

0.01    2009-05-12
        Initial release.